--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -102,7 +102,8 @@
                 <div class="card__img-body ">
                     <h5 class="card__title">News</h5>
                     <div class="card__img-pic ">
-                        <img src="./img/product__item1.png" alt="Here is a photo of the product title above" class="product__pic">
+                        <img src="./img/product__item1.png" alt="Here is a photo of the product title above"
+                            class="product__pic">
                     </div>
                     <h3 class="card__text">How To Deliver a Successful Product Launch</h3>
                     <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
@@ -110,7 +111,8 @@
                 <div class="card__img-body ">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__img-pic ">
-                        <img src="./img/product__item2.png" alt="Here is a photo of the product title above" class="product__pic">
+                        <img src="./img/product__item2.png" alt="Here is a photo of the product title above"
+                            class="product__pic">
                     </div>
                     <h3 class="card__text">The best cities for sales careers in 2022</h3>
                     <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray"> Bill Holloway</span></h4>
@@ -118,7 +120,8 @@
                 <div class="card__img-body ">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__img-pic">
-                        <img src="./img/product__item3.png" alt="Here is a photo of the product title above" class="product__pic">
+                        <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
+                            class="product__pic">
                     </div>
                     <h3 class="card__text">How to use 360 feedback to improve sales performance</h3>
                     <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">Stephen Henderson</span>
@@ -127,7 +130,8 @@
                 <div class="card__img-body ">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__img-pic">
-                        <img src="./img/product__item4.png" alt="Here is a photo of the product title above" class="product__pic">
+                        <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
+                            class="product__pic">
                     </div>
                     <h3 class="card__text">The Challenger Sale model: How to lead the conversation</h3>
                     <h4 class="card__footer">09 Jan 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
@@ -135,7 +139,8 @@
                 <div class="card__img-body ">
                     <h5 class="card__title">Product</h5>
                     <div class="card__img-pic ">
-                        <img src="./img/product__item5.png" alt="Here is a photo of the product title above" class="product__pic">
+                        <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
+                            class="product__pic">
                     </div>
                     <h3 class="card__text">3 ways To automate your lead generation process with Yoora</h3>
                     <h4 class="card__footer">08 Jul 2022, <span class="card__footer--gray"> Leroy Figueroa</span> </h4>
@@ -143,7 +148,8 @@
                 <div class="card__img-body ">
                     <h5 class="card__title">Product</h5>
                     <div class="card__img-pic">
-                        <img src="./img/product__item6.png" alt="Here is a photo of the product title above" class="product__pic">
+                        <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
+                            class="product__pic">
                     </div>
                     <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
                     <h4 class="card__footer">05 Aug 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
@@ -169,7 +175,8 @@
                     <div class="card__img-body ">
                         <h5 class="card__title">Marketing</h5>
                         <div class="card__img-pic ">
-                            <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above" class="marketing__pic">
+                            <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above"
+                                class="marketing__pic">
                         </div>
                         <h3 class="card__text">Email marketing best practices: 10 experts share their email tips</h3>
                         <h4 class="card__footer">23 Nov 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
@@ -188,7 +195,8 @@
                     </div>
                     <div class="card__body">
                         <div class="card--horizontal-block">
-                            <h3 class="card__text"> Sales presentations: templates, examples and ideas on how to present like a pro</h3>
+                            <h3 class="card__text"> Sales presentations: templates, examples and ideas on how to present
+                                like a pro</h3>
                             <h4 class="card__footer">11 Oct 2022,<span class="card__footer--gray"> by Laura Ryan</span>
                             </h4>
                         </div>
@@ -200,7 +208,8 @@
                         <div class="card--horizontal-block">
                             <h3 class="card__text"> How To Deliver a Successful <br>
                                 Product Launch</h3>
-                            <h4 class="card__footer">30 Jan 2022,<span class="card__footer--gray"> by Alice Washington</span>
+                            <h4 class="card__footer">30 Jan 2022,<span class="card__footer--gray"> by Alice
+                                    Washington</span>
                             </h4>
                         </div>
                         <div class="card--horizontal-block">
@@ -229,7 +238,8 @@
                 <div class="card__img-body ">
                     <h5 class="card__title">SERVICE</h5>
                     <div class="card__img-pic">
-                        <img src="./img/article__img1.png" alt="Here is a photo of the article title above" class="article__pic">
+                        <img src="./img/article__img1.png" alt="Here is a photo of the article title above"
+                            class="article__pic">
                     </div>
                     <h3 class="card__text">Sales Funnels: Definition, Process, Stages and Examples</h3>
                     <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
@@ -237,7 +247,8 @@
                 <div class="card__img-body ">
                     <h5 class="card__title">SALES</h5>
                     <div class="card__img-pic">
-                        <img src="./img/article__img2.png" alt="Here is a photo of the article title above" class="article__pic">
+                        <img src="./img/article__img2.png" alt="Here is a photo of the article title above"
+                            class="article__pic">
                     </div>
                     <h3 class="card__text">What is a sales Yoora and how do you build one?</h3>
                     <h4 class="card__footer">29 Mar 2022,<span class="card__footer--gray"> by Amanda Brooks/span> </h4>
@@ -245,10 +256,12 @@
                 <div class="card__img-body ">
                     <h5 class="card__title">SERVICE</h5>
                     <div class="card__img-pic">
-                        <img src="./img/article__img3.png" alt="Here is a photo of the article title above" class="article__pic">
+                        <img src="./img/article__img3.png" alt="Here is a photo of the article title above"
+                            class="article__pic">
                     </div>
                     <h3 class="card__text">10 real estate cold calling scripts to increase lead generation</h3>
-                    <h4 class="card__footer">27 Dec 2022,<span class="card__footer--gray"> by Roxie Sandoval</span> </h4>
+                    <h4 class="card__footer">27 Dec 2022,<span class="card__footer--gray"> by Roxie Sandoval</span>
+                    </h4>
                 </div>
             </div>
         </div>
@@ -269,12 +282,13 @@
                 <div class="cta__passage ">
                     <p class="cta__title font--large  ">Ready to supercharge your business?</p>
                     <p class="cta__text  font--medium ">Ask about Yoora products, pricing, implementation, or anything
-                        else.<br> Our highly trained reps are
+                        __VSCode-Escape-Value else.<br> Our highly trained reps are
                         standing by, ready to help.</p>
                 </div>
                 <div class="cta__button ">
                     <button class="btn btn--primary btn--chevron"> Try For Free
-                        <img  class="btn__icon" src="./img/button__icon.png" alt="This is the chevron-right icon of the button">
+                        <img class="btn__icon" src="./img/button__icon.png"
+                            alt="This is the chevron-right icon of the button">
                     </button>
                     <p class="cta__text text--small">Full access. No credit card required.</p>
                 </div>
@@ -292,14 +306,101 @@
     <!-------------------
     footer 
     --------------------->
-    <footer>
-        <div class="container">
-            <div class="footer__content">
-                <div class="content__left"></div>
-                <div class="content__right"></div>
+    <footer class="footer">
+        <div class="footer__content container">
+            <div class="content__left">
+                <a href="#" class="logo">
+                    <img src="./img/logo.png" alt="logo">
+                </a>
+                <div class="footer__text">
+                    <p class="font--small   ">We built an elegant solution.<br>
+                        Our team created a fully integrated sales<br> and marketing solution for SMBs</p>
+                </div>
+                <div class="footer__media">
+                    <ul class="media__list">
+                        <li>
+                            <img src="./img/Twitter.png" alt="" class="media__icon">
+                        </li>
+                        <li>
+                            <img src="./img/Facebook.png" alt="" class="media__icon">
+                        </li>
+                        <li>
+                            <img src="./img/Linkedin.png" alt="" class="media__icon">
+                        </li>
+                    </ul>
+
+
+                </div>
             </div>
-            <div class="footer__rules"></div>
+            <div class="content__right">
+                <div class="footer__list">
+                    <ul class="list__item">
+                        <li class="item item--mark">Company</li>
+                        <li class="item">About</li>
+                        <li class="item">Pricing</li>
+                        <li class="item">Jobs</li>
+                        <li class="item">Blog</li>
+                        <li class="item">Careers</li>
+                    </ul>
+                </div>
+                <div class="footer__list">
+                    <ul class="list__item">
+                        <li class="item item--mark">Product</li>
+                        <li class="item">Sales software</li>
+                        <li class="item">Features</li>
+                        <li class="item">Privacy and security</li>
+                        <li class="item">Marketplace</li>
+                        <li class="item">Status</li>
+                        <li class="item">API</li>
+                    </ul>
+                </div>
+                <div class="footer__list">
+                    <ul class=" list__item">
+                        <li class="item item--mark">Discover</li>
+                        <li class="item">Partner Program</li>
+                        <li class="item">Get our newsletter</li>
+                        <li class="item">Sales Pipeline Course</li>
+                        <li class="item">What is CRM?</li>
+                        <li class="item">CRM Comparison</li>
+                        <li class="item">Resources</li>
+                    </ul>
+                </div>
+                <div class="footer__list">
+                    <ul class="list__item">
+                        <li class="item item--mark">Help Center</li>
+                        <li class="item">Community</li>
+                        <li class="item">Knowledge Base </li>
+                        <li class="item">Academy</li>
+                        <li class="item">Support</li>
+                    </ul>
+                </div>
+            </div>
+
         </div>
+
+        <hr class="footer__line">
+
+        <div class="footer__rule container">
+            <a href="mailto: abc@example.com " class="link-mail">© Copyright 2022 Yoora, Inc.</a>
+
+            <div class="footer__rule-block">
+                <ul class="rules__list">
+                    <li class="item">Terms of Service</li>
+                    <li class="item">Privacy Policy</li>
+                    <li class="item">Cookies</li>
+                </ul>
+                <div class="rules__button">
+                    <button class="btn btn--group">
+                        <img src="./img/Shape.png" alt=" this is the icon for the change language button">
+                        <p>English</p>
+                        <img src="./img/button__icon2.png" alt="">
+                    </button>
+
+                </div>
+            </div>
+
+        </div>
+
     </footer>
 
 </body>
