--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -281,8 +281,7 @@
             <div class="cta__content">
                 <div class="cta__passage ">
                     <p class="cta__title font--large  ">Ready to supercharge your business?</p>
-                    <p class="cta__text  font--medium ">Ask about Yoora products, pricing, implementation, or anything
-                        __VSCode-Escape-Value else.<br> Our highly trained reps are
+                    <p class="cta__text  font--medium ">Ask about Yoora products, pricing, implementation, or anythingelse.<br> Our highly trained reps are
                         standing by, ready to help.</p>
                 </div>
                 <div class="cta__button ">
