--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -281,7 +281,8 @@
             <div class="cta__content">
                 <div class="cta__passage ">
                     <p class="cta__title font--large  ">Ready to supercharge your business?</p>
-                    <p class="cta__text  font--medium ">Ask about Yoora products, pricing, implementation, or anythingelse.<br> Our highly trained reps are
+                    <p class="cta__text  font--medium ">Ask about Yoora products, pricing, implementation, or
+                        anythingelse.<br> Our highly trained reps are
                         standing by, ready to help.</p>
                 </div>
                 <div class="cta__button ">
@@ -318,13 +319,13 @@
                 <div class="footer__media">
                     <ul class="media__list">
                         <li>
-                            <img src="./img/Twitter.png" alt="" class="media__icon">
+                            <img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media__icon">
                         </li>
                         <li>
-                            <img src="./img/Facebook.png" alt="" class="media__icon">
+                            <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media__icon">
                         </li>
                         <li>
-                            <img src="./img/Linkedin.png" alt="" class="media__icon">
+                            <img src="./img/Linkedin.png" alt="Here is a photo of the media above" class="media__icon">
                         </li>
                     </ul>
 
@@ -392,7 +393,7 @@
                     <button class="btn btn--group">
                         <img src="./img/Shape.png" alt=" this is the icon for the change language button">
                         <p>English</p>
-                        <img src="./img/button__icon2.png" alt="">
+                        <img src="./img/button__icon2.png" alt="this is the icon chevron-down for the change language button">
                     </button>
 
                 </div>
