Fix: btn--group

--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -391,9 +391,9 @@
                 </ul>
                 <div class="rules__button">
                     <button class="btn btn--group">
-                        <img src="./img/Shape.png" alt=" this is the icon for the change language button">
-                        <p>English</p>
-                        <img src="./img/button__icon2.png" alt="this is the icon chevron-down for the change language button">
+                        <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn__icon">
+                        <p class="btn__text">English</p>
+                        <img src="./img/button__icon2.png" alt="this is the icon chevron-down for the change language button" class="btn__icon">
                     </button>
 
                 </div>
