--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="header__content ">
                 <a href="#" class="logo">
-                    <img src="../practice-01/img/logo.png" alt="logo">
+                    <img src="./img/logo.png" alt="logo">
 
                 </a>
                 <nav class="navbar">
