--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -13,29 +13,29 @@
 
 <body>
     <!-------------------
-     Header 
+     Header
     --------------------->
     <header class="header">
 
         <div class="container">
-            <div class="header__content ">
+            <div class="header__content">
                 <a href="#" class="logo">
                     <img src="./img/logo.png" alt="logo">
 
                 </a>
                 <nav class="navbar">
-                    <div class="nav__menu ">
+                    <div class="nav__menu">
                         <ul class="menu__list">
                             <li><a class="item font--small" href="#">Product</a></li>
                             <li><a class="item font--small" href="#">Company</a></li>
                             <li><a class="item font--small" href="#">Pricing</a></li>
-                            <li><a class="item font--small" href="#">Recources</a></li>
+                            <li><a class="item font--small" href="#">Recourses</a></li>
                             <li><a class="item font--small" href="#">Contact</a></li>
                         </ul>
                     </div>
-                    <div class="nav__button ">
-                        <button class="btn btn--primary ">Login</button>
-                        <button class="btn btn--secondary ">Try for Free</button>
+                    <div class="nav__button">
+                        <button class="btn btn--primary">Login</button>
+                        <button class="btn btn--secondary">Try for Free</button>
 
                     </div>
                 </nav>
@@ -47,19 +47,19 @@
             </div>
             <div class="header__tab">
                 <ul class="tab__list">
-                    <li class="list--mark"><a class="list__item font--medium " href="#">All Articles</a></li>
-                    <li><a class="list__item font--medium " href="#">Marketing</a></li>
-                    <li><a class="list__item font--medium " href="#">Service</a></li>
-                    <li><a class="list__item font--medium  " href="#">Product</a></li>
-                    <li><a class="list__item font--medium " href="#">News</a></li>
-                    <li><a class="list__item font--medium " href="#">Sales</a></li>
+                    <li class="list--mark"><a class="list__item font--medium" href="#">All Articles</a></li>
+                    <li><a class="list__item font--medium" href="#">Marketing</a></li>
+                    <li><a class="list__item font--medium" href="#">Service</a></li>
+                    <li><a class="list__item font--medium" href="#">Product</a></li>
+                    <li><a class="list__item font--medium" href="#">News</a></li>
+                    <li><a class="list__item font--medium" href="#">Sales</a></li>
 
             </div>
 
 
     </header>
     <!-------------------
-     Header end 
+     Header end
     --------------------->
 
 
@@ -67,11 +67,11 @@
 
 
     <!-------------------
-     Serviec section 
+     Serviec section
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service__left card ">
+            <div class="service__left card" >
                 <h5 class="card__title">SERVICE</h5>
                 <h1 class="card__text--lg">CRM insights: Selecting <br>
                     the Right One for Your <br>
@@ -94,30 +94,30 @@
 
 
     <!-------------------
-     Product section   
+     Product section
     --------------------->
     <section class="product">
         <div class="container">
             <div class="product__content  card card__img">
-                <div class="card__img-body ">
+                <div class="card__img-body">
                     <h5 class="card__title">News</h5>
-                    <div class="card__img-pic ">
+                    <div class="card__img-pic">
                         <img src="./img/product__item1.png" alt="Here is a photo of the product title above"
                             class="product__pic">
                     </div>
                     <h3 class="card__text">How To Deliver a Successful Product Launch</h3>
                     <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
-                <div class="card__img-body ">
+                <div class="card__img-body">
                     <h5 class="card__title">Sales</h5>
-                    <div class="card__img-pic ">
+                    <div class="card__img-pic">
                         <img src="./img/product__item2.png" alt="Here is a photo of the product title above"
                             class="product__pic">
                     </div>
                     <h3 class="card__text">The best cities for sales careers in 2022</h3>
                     <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray"> Bill Holloway</span></h4>
                 </div>
-                <div class="card__img-body ">
+                <div class="card__img-body">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__img-pic">
                         <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
@@ -127,7 +127,7 @@
                     <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">Stephen Henderson</span>
                     </h4>
                 </div>
-                <div class="card__img-body ">
+                <div class="card__img-body">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__img-pic">
                         <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
@@ -136,16 +136,16 @@
                     <h3 class="card__text">The Challenger Sale model: How to lead the conversation</h3>
                     <h4 class="card__footer">09 Jan 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
-                <div class="card__img-body ">
+                <div class="card__img-body">
                     <h5 class="card__title">Product</h5>
-                    <div class="card__img-pic ">
+                    <div class="card__img-pic">
                         <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
                             class="product__pic">
                     </div>
                     <h3 class="card__text">3 ways To automate your lead generation process with Yoora</h3>
                     <h4 class="card__footer">08 Jul 2022, <span class="card__footer--gray"> Leroy Figueroa</span> </h4>
                 </div>
-                <div class="card__img-body ">
+                <div class="card__img-body">
                     <h5 class="card__title">Product</h5>
                     <div class="card__img-pic">
                         <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
@@ -166,27 +166,36 @@
 
 
     <!-------------------
-     Marketing section 
+     Marketing section
     --------------------->
     <section class="marketing">
         <div class="container">
             <div class="marketing__content">
                 <div class="marketing__left card card__img">
-                    <div class="card__img-body ">
+                    <div class="card__img-body">
                         <h5 class="card__title">Marketing</h5>
-                        <div class="card__img-pic ">
+                        <div class="card__img-pic">
                             <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above"
                                 class="marketing__pic">
                         </div>
-                        <h3 class="card__text">Email marketing best practices: 10 experts share their email tips</h3>
-                        <h4 class="card__footer">23 Nov 2022,<span class="card__footer--gray">by joshua Nash</span></h4>
+                        <h3 class="card__text">
+                            Email marketing best practices: 10 experts share their email tips
+                        </h3>
+                        <h4 class="card__footer">
+                            23 Nov 2022,
+                            <span class="card__footer--gray">by joshua Nash</span>
+                        </h4>
                     </div>
                 </div>
                 <div class="marketing__right card card--horizontal">
                     <div class="card__body">
                         <div class="card--horizontal-block">
-                            <h3 class="card__text"> Marketplace Monthly Apps Spotlight: Aug 2022</h3>
-                            <h4 class="card__footer">11 Aug 2022,<span class="card__footer--gray">by joshua Nash</span>
+                            <h3 class="card__text">
+                                Marketplace Monthly Apps Spotlight: Aug 2022
+                            </h3>
+                            <h4 class="card__footer">
+                                11 Aug 2022,
+                                <span class="card__footer--gray">by joshua Nash</span>
                             </h4>
                         </div>
                         <div class="card--horizontal-block">
@@ -195,9 +204,12 @@
                     </div>
                     <div class="card__body">
                         <div class="card--horizontal-block">
-                            <h3 class="card__text"> Sales presentations: templates, examples and ideas on how to present
-                                like a pro</h3>
-                            <h4 class="card__footer">11 Oct 2022,<span class="card__footer--gray"> by Laura Ryan</span>
+                            <h3 class="card__text">
+                                Sales presentations: templates, examples and ideas on how to present like a pro
+                            </h3>
+                            <h4 class="card__footer">
+                                11 Oct 2022,
+                                <span class="card__footer--gray"> by Laura Ryan</span>
                             </h4>
                         </div>
                         <div class="card--horizontal-block">
@@ -208,8 +220,9 @@
                         <div class="card--horizontal-block">
                             <h3 class="card__text"> How To Deliver a Successful <br>
                                 Product Launch</h3>
-                            <h4 class="card__footer">30 Jan 2022,<span class="card__footer--gray"> by Alice
-                                    Washington</span>
+                            <h4 class="card__footer">
+                                30 Jan 2022,
+                                <span class="card__footer--gray"> by Alice Washington</span>
                             </h4>
                         </div>
                         <div class="card--horizontal-block">
@@ -230,62 +243,71 @@
 
 
     <!-------------------
-     BlogArticle section 
+     BlogArticle section
     --------------------->
     <section class="Blog_Article">
         <div class="container">
             <div class="article__content card card__img">
-                <div class="card__img-body ">
+                <div class="card__img-body">
                     <h5 class="card__title">SERVICE</h5>
                     <div class="card__img-pic">
                         <img src="./img/article__img1.png" alt="Here is a photo of the article title above"
                             class="article__pic">
                     </div>
                     <h3 class="card__text">Sales Funnels: Definition, Process, Stages and Examples</h3>
-                    <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
+                    <h4 class="card__footer">
+                        29 Jun 2022,
+                        <span class="card__footer--gray">by joshua Nash</span>
+                    </h4>
                 </div>
-                <div class="card__img-body ">
+                <div class="card__img-body">
                     <h5 class="card__title">SALES</h5>
                     <div class="card__img-pic">
                         <img src="./img/article__img2.png" alt="Here is a photo of the article title above"
                             class="article__pic">
                     </div>
                     <h3 class="card__text">What is a sales Yoora and how do you build one?</h3>
-                    <h4 class="card__footer">29 Mar 2022,<span class="card__footer--gray"> by Amanda Brooks/span> </h4>
+                    <h4 class="card__footer">
+                        29 Mar 2022,
+                        <span class="card__footer--gray"> by Amanda Brooks/span>
+                    </h4>
                 </div>
-                <div class="card__img-body ">
+                <div class="card__img-body">
                     <h5 class="card__title">SERVICE</h5>
                     <div class="card__img-pic">
                         <img src="./img/article__img3.png" alt="Here is a photo of the article title above"
                             class="article__pic">
                     </div>
                     <h3 class="card__text">10 real estate cold calling scripts to increase lead generation</h3>
-                    <h4 class="card__footer">27 Dec 2022,<span class="card__footer--gray"> by Roxie Sandoval</span>
+                    <h4 class="card__footer">
+                        27 Dec 2022,
+                        <span class="card__footer--gray"> by Roxie Sandoval</span>
                     </h4>
                 </div>
             </div>
         </div>
     </section>
     <!-------------------
-     BlgoArticle end
+     BlogArticle end
     --------------------->
 
 
 
 
     <!-------------------
-    CTA section 
+    CTA section
     --------------------->
-    <section class="cta ">
+    <section class="cta">
         <div class="container">
             <div class="cta__content">
-                <div class="cta__passage ">
-                    <p class="cta__title font--large  ">Ready to supercharge your business?</p>
-                    <p class="cta__text  font--medium ">Ask about Yoora products, pricing, implementation, or
-                        anythingelse.<br> Our highly trained reps are
-                        standing by, ready to help.</p>
+                <div class="cta__passage">
+                    <p class="cta__title font--large">Ready to supercharge your business?</p>
+                    <p class="cta__text  font--medium">
+                        Ask about Yoora products, pricing, implementation, or anything else.
+                        <br> Our highly trained reps are standing by, ready to help.
+                    </p>
                 </div>
-                <div class="cta__button ">
+                <div class="cta__button">
                     <button class="btn btn--primary btn--chevron"> Try For Free
                         <img class="btn__icon" src="./img/button__icon.png"
                             alt="This is the chevron-right icon of the button">
@@ -304,7 +326,7 @@
 
 
     <!-------------------
-    footer 
+    footer
     --------------------->
     <footer class="footer">
         <div class="footer__content container">
@@ -313,7 +335,7 @@
                     <img src="./img/logo.png" alt="logo">
                 </a>
                 <div class="footer__text">
-                    <p class="font--small ">We built an elegant solution.<br>
+                    <p class="font--small">We built an elegant solution.<br>
                         Our team created a fully integrated sales<br> and marketing solution for SMBs</p>
                 </div>
                 <div class="footer__media">
@@ -381,7 +403,7 @@
         <hr class="footer__line">
 
         <div class="footer__rule container">
-            <a href="mailto: abc@example.com " class="link-mail">© Copyright 2022 Yoora, Inc.</a>
+            <a href="mailto: abc@example.com" class="link-mail">© Copyright 2022 Yoora, Inc.</a>
 
             <div class="footer__rule-block">
                 <ul class="rules__list">
@@ -391,9 +413,11 @@
                 </ul>
                 <div class="rules__button">
                     <button class="btn btn--group">
-                        <img src="./img/Shape.png" alt=" this is the icon for the change language button" class="btn__icon">
+                        <img src="./img/Shape.png" alt=" this is the icon for the change language button"
+                            class="btn__icon">
                         <p class="btn__text">English</p>
-                        <img src="./img/button__icon2.png" alt="this is the icon chevron-down for the change language button" class="btn__icon">
+                        <img src="./img/button__icon2.png"
+                            alt="this is the icon chevron-down for the change language button" class="btn__icon">
                     </button>
 
                 </div>
