--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -67,7 +67,7 @@
 
 
     <!-------------------
-     Serviec section
+     Service section
     --------------------->
     <section class="service">
         <div class="container">
@@ -86,7 +86,7 @@
     </section>
 
     <!-------------------
-     Serviec end
+     Service end
     --------------------->
 
 
@@ -330,34 +330,31 @@
     --------------------->
     <footer class="footer">
         <div class="footer__content container">
-            <div class="content__left">
+            <div class="content-left">
                 <a href="#" class="logo">
                     <img src="./img/logo.png" alt="logo">
                 </a>
-                <div class="footer__text">
-                    <p class="font--small">We built an elegant solution.<br>
-                        Our team created a fully integrated sales<br> and marketing solution for SMBs</p>
-                </div>
-                <div class="footer__media">
-                    <ul class="media__list">
+                    <p class="font--small">
+                        We built an elegant solution.<br>
+                        Our team created a fully integrated sales<br>
+                        and marketing solution for SMBs</p>
+                 <ul class="media">
                         <li>
-                            <img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media__icon">
+                            <img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon">
                         </li>
                         <li>
-                            <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media__icon">
+                            <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon">
                         </li>
                         <li>
-                            <img src="./img/Linkedin.png" alt="Here is a photo of the media above" class="media__icon">
+                            <img src="./img/Linkedin.png" alt="Here is a photo of the media above" class="media-icon">
                         </li>
                     </ul>
 
-
-                </div>
             </div>
-            <div class="content__right">
+            <div class="content-right">
                 <div class="footer__list">
-                    <ul class="list__item">
-                        <li class="item item--mark">Company</li>
+                    <ul class="list-menu">
+                        <li class="item ">Company</li>
                         <li class="item">About</li>
                         <li class="item">Pricing</li>
                         <li class="item">Jobs</li>
@@ -366,8 +363,8 @@
                     </ul>
                 </div>
                 <div class="footer__list">
-                    <ul class="list__item">
-                        <li class="item item--mark">Product</li>
+                    <ul class="list-menu">
+                        <li class="item ">Product</li>
                         <li class="item">Sales software</li>
                         <li class="item">Features</li>
                         <li class="item">Privacy and security</li>
@@ -377,8 +374,8 @@
                     </ul>
                 </div>
                 <div class="footer__list">
-                    <ul class=" list__item">
-                        <li class="item item--mark">Discover</li>
+                    <ul class=" list-menu">
+                        <li class="item ">Discover</li>
                         <li class="item">Partner Program</li>
                         <li class="item">Get our newsletter</li>
                         <li class="item">Sales Pipeline Course</li>
@@ -388,8 +385,8 @@
                     </ul>
                 </div>
                 <div class="footer__list">
-                    <ul class="list__item">
-                        <li class="item item--mark">Help Center</li>
+                    <ul class="list-menu">
+                        <li class="item ">Help Center</li>
                         <li class="item">Community</li>
                         <li class="item">Knowledge Base </li>
                         <li class="item">Academy</li>
@@ -403,16 +400,16 @@
         <hr class="footer__line">
 
         <div class="footer__rule container">
-            <a href="mailto: abc@example.com" class="link-mail">© Copyright 2022 Yoora, Inc.</a>
+            <a class="link-mail">&#169;Copyright 2022 Yoora, Inc.</a>
 
             <div class="footer__rule-block">
-                <ul class="rules__list">
+                <ul class="privacy-list">
                     <li class="item">Terms of Service</li>
                     <li class="item">Privacy Policy</li>
                     <li class="item">Cookies</li>
                 </ul>
-                <div class="rules__button">
-                    <button class="btn btn--group">
+                <div class="locale-switche">
+                    <button class="btn btn--switcher">
                         <img src="./img/Shape.png" alt=" this is the icon for the change language button"
                             class="btn__icon">
                         <p class="btn__text">English</p>
