Fix : footer-section

--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -71,14 +71,14 @@
     --------------------->
     <section class="service">
         <div class="container">
-            <div class="service__left card" >
+            <div class="service-left card" >
                 <h5 class="card__title">SERVICE</h5>
                 <h1 class="card__text--lg">CRM insights: Selecting <br>
                     the Right One for Your <br>
                     Organization</h1>
                 <h4 class="card__footer">05 Sep 2022, <span class="card__footer--gray">by Joshua Nash</span> </h4>
             </div>
-            <div class="service__right">
+            <div class="service-right">
             </div>
         </div>
 
@@ -171,7 +171,7 @@
     <section class="marketing">
         <div class="container">
             <div class="marketing__content">
-                <div class="marketing__left card card__img">
+                <div class="marketing-left card card__img">
                     <div class="card__img-body">
                         <h5 class="card__title">Marketing</h5>
                         <div class="card__img-pic">
@@ -187,7 +187,7 @@
                         </h4>
                     </div>
                 </div>
-                <div class="marketing__right card card--horizontal">
+                <div class="marketing-right card card--horizontal">
                     <div class="card__body">
                         <div class="card--horizontal-block">
                             <h3 class="card__text">
@@ -326,7 +326,7 @@
 
 
     <!-------------------
-    footer
+    Footer
     --------------------->
     <footer class="footer">
         <div class="footer__content container">
@@ -353,7 +353,7 @@
             </div>
             <div class="content-right">
                 <div class="footer__list">
-                    <ul class="list-menu">
+                    <ul class="list__menu">
                         <li class="item ">Company</li>
                         <li class="item">About</li>
                         <li class="item">Pricing</li>
@@ -363,7 +363,7 @@
                     </ul>
                 </div>
                 <div class="footer__list">
-                    <ul class="list-menu">
+                    <ul class="list__menu">
                         <li class="item ">Product</li>
                         <li class="item">Sales software</li>
                         <li class="item">Features</li>
@@ -374,7 +374,7 @@
                     </ul>
                 </div>
                 <div class="footer__list">
-                    <ul class=" list-menu">
+                    <ul class=" list__menu">
                         <li class="item ">Discover</li>
                         <li class="item">Partner Program</li>
                         <li class="item">Get our newsletter</li>
@@ -385,7 +385,7 @@
                     </ul>
                 </div>
                 <div class="footer__list">
-                    <ul class="list-menu">
+                    <ul class="list__menu">
                         <li class="item ">Help Center</li>
                         <li class="item">Community</li>
                         <li class="item">Knowledge Base </li>
@@ -400,16 +400,16 @@
         <hr class="footer__line">
 
         <div class="footer__rule container">
-            <a class="link-mail">&#169;Copyright 2022 Yoora, Inc.</a>
+            <a class="rule__copyright">&#169;Copyright 2022 Yoora, Inc.</a>
 
-            <div class="footer__rule-block">
-                <ul class="privacy-list">
+            <div class="content-right">
+                <ul class="rule__menu">
                     <li class="item">Terms of Service</li>
                     <li class="item">Privacy Policy</li>
                     <li class="item">Cookies</li>
                 </ul>
-                <div class="locale-switche">
-                    <button class="btn btn--switcher">
+                <div class="rule__locale">
+                    <button class="btn btn--flex">
                         <img src="./img/Shape.png" alt=" this is the icon for the change language button"
                             class="btn__icon">
                         <p class="btn__text">English</p>
