Fix : footer-section

--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -330,7 +330,7 @@
     --------------------->
     <footer class="footer">
         <div class="footer__content container">
-            <div class="content-left">
+            <div class="footer__content-left">
                 <a href="#" class="logo">
                     <img src="./img/logo.png" alt="logo">
                 </a>
@@ -351,7 +351,7 @@
                     </ul>
 
             </div>
-            <div class="content-right">
+            <div class="footer__content-right">
                 <div class="footer__list">
                     <ul class="list__menu">
                         <li class="item ">Company</li>
@@ -402,7 +402,7 @@
         <div class="footer__rule container">
             <a class="rule__copyright">&#169;Copyright 2022 Yoora, Inc.</a>
 
-            <div class="content-right">
+            <div class="footer__rule-right">
                 <ul class="rule__menu">
                     <li class="item">Terms of Service</li>
                     <li class="item">Privacy Policy</li>
