--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -73,7 +73,7 @@
         <div class="container">
             <div class="service-left card" >
                 <h5 class="card__title">SERVICE</h5>
-                <h1 class="card__text--lg">CRM insights: Selecting <br>
+                <h1 class="card__text font--large">CRM insights: Selecting <br>
                     the Right One for Your <br>
                     Organization</h1>
                 <h4 class="card__footer">05 Sep 2022, <span class="card__footer--gray">by Joshua Nash</span> </h4>
