--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -16,7 +16,6 @@
      Header
     --------------------->
     <header class="header">
-
         <div class="container">
             <div class="header__content">
                 <a href="#" class="logo">
@@ -46,7 +45,7 @@
                 </p>
             </div>
             <div class="header__tab">
-                <ul class="tab__list">
+                <ul class="tab__menu menu__list">
                     <li class="list--mark"><a class="list__item font--medium" href="#">All Articles</a></li>
                     <li><a class="list__item font--medium" href="#">Marketing</a></li>
                     <li><a class="list__item font--medium" href="#">Service</a></li>
@@ -79,6 +78,7 @@
                 <h4 class="card__footer">05 Sep 2022, <span class="card__footer--gray">by Joshua Nash</span> </h4>
             </div>
             <div class="service-right">
+                <img src="./img/service__img.png" alt="This is the service's photo" class="service__img">
             </div>
         </div>
 
@@ -338,7 +338,7 @@
                         We built an elegant solution.<br>
                         Our team created a fully integrated sales<br>
                         and marketing solution for SMBs</p>
-                 <ul class="media">
+                 <ul class="media menu__list">
                         <li>
                             <img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon">
                         </li>
@@ -352,8 +352,8 @@
 
             </div>
             <div class="footer__content-right">
-                <div class="footer__list">
-                    <ul class="list__menu">
+                <div class="footer__menu">
+                    <ul class="menu__list">
                         <li class="item ">Company</li>
                         <li class="item">About</li>
                         <li class="item">Pricing</li>
@@ -362,8 +362,8 @@
                         <li class="item">Careers</li>
                     </ul>
                 </div>
-                <div class="footer__list">
-                    <ul class="list__menu">
+                <div class="footer__menu">
+                    <ul class="menu__list">
                         <li class="item ">Product</li>
                         <li class="item">Sales software</li>
                         <li class="item">Features</li>
@@ -373,8 +373,8 @@
                         <li class="item">API</li>
                     </ul>
                 </div>
-                <div class="footer__list">
-                    <ul class=" list__menu">
+                <div class="footer__menu">
+                    <ul class="_men__list">
                         <li class="item ">Discover</li>
                         <li class="item">Partner Program</li>
                         <li class="item">Get our newsletter</li>
@@ -384,8 +384,8 @@
                         <li class="item">Resources</li>
                     </ul>
                 </div>
-                <div class="footer__list">
-                    <ul class="list__menu">
+                <div class="footer__menu">
+                    <ul class="menu__list">
                         <li class="item ">Help Center</li>
                         <li class="item">Community</li>
                         <li class="item">Knowledge Base </li>
@@ -403,7 +403,7 @@
             <a class="rule__copyright">&#169;Copyright 2022 Yoora, Inc.</a>
 
             <div class="footer__rule-right">
-                <ul class="rule__menu">
+                <ul class="rule__menu menu__list">
                     <li class="item">Terms of Service</li>
                     <li class="item">Privacy Policy</li>
                     <li class="item">Cookies</li>
