--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -46,12 +46,12 @@
             </div>
             <div class="header__tab">
                 <ul class="tab__menu menu__list">
-                    <li class="list--mark"><a class="list__item font--medium" href="#">All Articles</a></li>
-                    <li><a class="list__item font--medium" href="#">Marketing</a></li>
-                    <li><a class="list__item font--medium" href="#">Service</a></li>
-                    <li><a class="list__item font--medium" href="#">Product</a></li>
-                    <li><a class="list__item font--medium" href="#">News</a></li>
-                    <li><a class="list__item font--medium" href="#">Sales</a></li>
+                    <li><a id="list--mark" class="item font--medium" href="#">All Articles</a></li>
+                    <li><a class="item font--medium" href="#">Marketing</a></li>
+                    <li><a class="item font--medium" href="#">Service</a></li>
+                    <li><a class="item font--medium" href="#">Product</a></li>
+                    <li><a class="item font--medium" href="#">News</a></li>
+                    <li><a class="item font--medium" href="#">Sales</a></li>
 
             </div>
 
@@ -115,7 +115,7 @@
                             class="product__pic">
                     </div>
                     <h3 class="card__text">The best cities for sales careers in 2022</h3>
-                    <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray"> Bill Holloway</span></h4>
+                    <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray">by Bill Holloway</span></h4>
                 </div>
                 <div class="card__img-body">
                     <h5 class="card__title">Sales</h5>
@@ -124,7 +124,7 @@
                             class="product__pic">
                     </div>
                     <h3 class="card__text">How to use 360 feedback to improve sales performance</h3>
-                    <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">Stephen Henderson</span>
+                    <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">by Stephen Henderson</span>
                     </h4>
                 </div>
                 <div class="card__img-body">
@@ -269,7 +269,7 @@
                     <h3 class="card__text">What is a sales Yoora and how do you build one?</h3>
                     <h4 class="card__footer">
                         29 Mar 2022,
-                        <span class="card__footer--gray"> by Amanda Brooks/span>
+                        <span class="card__footer--gray"> by Amanda Brooks</span>
                     </h4>
                 </div>
                 <div class="card__img-body">
@@ -340,57 +340,56 @@
                         and marketing solution for SMBs</p>
                  <ul class="media menu__list">
                         <li>
-                            <img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon">
+                            <a class="item" href="_blank"><img src="./img/Twitter.png" alt="Here is a logo of the media above" class="media-icon"></a>
                         </li>
                         <li>
-                            <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon">
+                            <a class="item" href="_blank"> <img src="./img/Facebook.png" alt="Here is a logo of the media above" class="media-icon"></a>
                         </li>
                         <li>
-                            <img src="./img/Linkedin.png" alt="Here is a photo of the media above" class="media-icon">
-                        </li>
+                            <a class="item" href="_blank"> <img src="./img/Linkedin.png" alt="Here is a logo of the media above" class="media-icon"></a>                        </li>
                     </ul>
 
             </div>
             <div class="footer__content-right">
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="item ">Company</li>
-                        <li class="item">About</li>
-                        <li class="item">Pricing</li>
-                        <li class="item">Jobs</li>
-                        <li class="item">Blog</li>
-                        <li class="item">Careers</li>
+                        <li class="list__item"><a class="item" href="#">Company</a></li>
+                        <li class="list__item"><a class="item" href="#">About</a></li>
+                        <li class="list__item"><a class="item" href="#">Pricing</a></li>
+                        <li class="list__item"><a class="item" href="#">Jobs</a></li>
+                        <li class="list__item"><a class="item" href="#">Blog</a></li>
+                        <li class="list__item"><a class="item" href="#">Careers</a></li>
                     </ul>
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="item ">Product</li>
-                        <li class="item">Sales software</li>
-                        <li class="item">Features</li>
-                        <li class="item">Privacy and security</li>
-                        <li class="item">Marketplace</li>
-                        <li class="item">Status</li>
-                        <li class="item">API</li>
-                    </ul>
-                </div>
-                <div class="footer__menu">
-                    <ul class="_men__list">
-                        <li class="item ">Discover</li>
-                        <li class="item">Partner Program</li>
-                        <li class="item">Get our newsletter</li>
-                        <li class="item">Sales Pipeline Course</li>
-                        <li class="item">What is CRM?</li>
-                        <li class="item">CRM Comparison</li>
-                        <li class="item">Resources</li>
+                        <li class="list__item"><a class="item" href="#">Product</a></li>
+                        <li class="list__item"><a class="item" href="#">Sales software</a></li>
+                        <li class="list__item"><a class="item" href="#">Features</a></li>
+                        <li class="list__item"><a class="item" href="#">Privacy and security</a></li>
+                        <li class="list__item"><a class="item" href="#">Marketplace</a></li>
+                        <li class="list__item"><a class="item" href="#">Status</a></li>
+                        <li class="list__item"><a class="item" href="#">API</a></li>
                     </ul>
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="item ">Help Center</li>
-                        <li class="item">Community</li>
-                        <li class="item">Knowledge Base </li>
-                        <li class="item">Academy</li>
-                        <li class="item">Support</li>
+                        <li class="list__item"><a class="item" href="#">Discover</a></li>
+                        <li class="list__item"><a class="item" href="#">Partner Program</a></li>
+                        <li class="list__item"><a class="item" href="#">Get our newsletter</a></li>
+                        <li class="list__item"><a class="item" href="#">Sales Pipeline Course</a></li>
+                        <li class="list__item"><a class="item" href="#">What is CRM?</a></li>
+                        <li class="list__item"><a class="item" href="#">CRM Comparison</a></li>
+                        <li class="list__item"><a class="item" href="#">Resources</a></li>
+                    </ul>
+                </div>
+                <div class="footer__menu">
+                    <ul class="menu__list">
+                        <li class="list__item"><a class="item" href="#">Help Center</a></li>
+                        <li class="list__item"><a class="item" href="#">Community</a></li>
+                        <li class="list__item"><a class="item" href="#">Knowledge Base</a></li>
+                        <li class="list__item"><a class="item" href="#">Academy</a></li>
+                        <li class="list__item"><a class="item" href="#">Support</a></li>
                     </ul>
                 </div>
             </div>
@@ -400,13 +399,13 @@
         <hr class="footer__line">
 
         <div class="footer__rule container">
-            <a class="rule__copyright">&#169;Copyright 2022 Yoora, Inc.</a>
+            <a class="rule__copyright" href="__blank">&#169;Copyright 2022 Yoora, Inc.</a>
 
             <div class="footer__rule-right">
                 <ul class="rule__menu menu__list">
-                    <li class="item">Terms of Service</li>
-                    <li class="item">Privacy Policy</li>
-                    <li class="item">Cookies</li>
+                    <li><a class="item" href="#">Terms of Service</a></li>
+                    <li><a class="item" href="#">Privacy Police</a></li>
+                    <li><a class="item" href="#">Cookies</a></li>
                 </ul>
                 <div class="rule__locale">
                     <button class="btn btn--flex">
