--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -25,15 +25,25 @@
                 <nav class="navbar">
                     <div class="nav__menu">
                         <ul class="menu__list">
-                            <li><a class="item font--small" href="#">Product</a></li>
-                            <li><a class="item font--small" href="#">Company</a></li>
-                            <li><a class="item font--small" href="#">Pricing</a></li>
-                            <li><a class="item font--small" href="#">Recourses</a></li>
-                            <li><a class="item font--small" href="#">Contact</a></li>
+                            <li class="list__item">
+                                <a class="item font--small" href="#">Product</a>
+                            </li>
+                            <li class="list__item">
+                                <a class="item font--small" href="#">Company</a>
+                            </li>
+                            <li class="list__item">
+                                <a class="item font--small" href="#">Pricing</a>
+                            </li>
+                            <li class="list__item">
+                                <a class="item font--small" href="#">Recourses</a>
+                            </li>
+                            <li class="list__item">
+                                <a class="item font--small" href="#">Contact</a>
+                            </li>
                         </ul>
                     </div>
                     <div class="nav__button">
-                        <button class="btn btn--primary">Login</button>
+                        <a href="__blank" class="btn btn--primary">Login</a>
                         <button class="btn btn--secondary">Try for Free</button>
 
                     </div>
@@ -44,8 +54,8 @@
                     <span class="carousel__content--below">form our experts</span>
                 </p>
             </div>
-            <div class="header__tab">
-                <ul class="tab__menu menu__list">
+            <div class="header__tab nav__menu">
+                <ul class="tab__menu  menu__list">
                     <li><a id="list--mark" class="item font--medium" href="#">All Articles</a></li>
                     <li><a class="item font--medium" href="#">Marketing</a></li>
                     <li><a class="item font--medium" href="#">Service</a></li>
@@ -71,11 +81,13 @@
     <section class="service">
         <div class="container">
             <div class="service-left card" >
-                <h5 class="card__title">SERVICE</h5>
-                <h1 class="card__text font--large">CRM insights: Selecting <br>
-                    the Right One for Your <br>
-                    Organization</h1>
-                <h4 class="card__footer">05 Sep 2022, <span class="card__footer--gray">by Joshua Nash</span> </h4>
+                <div class="card__body">
+                    <h5 class="card__title">SERVICE</h5>
+                    <h1 class="card__text font--large">CRM insights: Selecting <br>
+                        the Right One for Your <br>
+                        Organization</h1>
+                    <h4 class="card__footer">05 Sep 2022, <span class="card__footer--gray">by Joshua Nash</span> </h4>
+                </div>
             </div>
             <div class="service-right">
                 <img src="./img/service__img.png" alt="This is the service's photo" class="service__img">
@@ -99,7 +111,7 @@
     <section class="product">
         <div class="container">
             <div class="product__content  card card__img">
-                <div class="card__img-body">
+                <div class="card__body">
                     <h5 class="card__title">News</h5>
                     <div class="card__img-pic">
                         <img src="./img/product__item1.png" alt="Here is a photo of the product title above"
@@ -108,7 +120,7 @@
                     <h3 class="card__text">How To Deliver a Successful Product Launch</h3>
                     <h4 class="card__footer">29 Jun 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
-                <div class="card__img-body">
+                <div class="card__body">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__img-pic">
                         <img src="./img/product__item2.png" alt="Here is a photo of the product title above"
@@ -117,7 +129,7 @@
                     <h3 class="card__text">The best cities for sales careers in 2022</h3>
                     <h4 class="card__footer">20 Mar 2022, <span class="card__footer--gray">by Bill Holloway</span></h4>
                 </div>
-                <div class="card__img-body">
+                <div class="card__body">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__img-pic">
                         <img src="./img/product__item3.png" alt="Here is a photo of the product title above"
@@ -127,7 +139,7 @@
                     <h4 class="card__footer">07 Jun 2022, <span class="card__footer--gray">by Stephen Henderson</span>
                     </h4>
                 </div>
-                <div class="card__img-body">
+                <div class="card__body">
                     <h5 class="card__title">Sales</h5>
                     <div class="card__img-pic">
                         <img src="./img/product__item4.png" alt="Here is a photo of the product title above"
@@ -136,7 +148,7 @@
                     <h3 class="card__text">The Challenger Sale model: How to lead the conversation</h3>
                     <h4 class="card__footer">09 Jan 2022,<span class="card__footer--gray">by joshua Nash</span> </h4>
                 </div>
-                <div class="card__img-body">
+                <div class="card__body">
                     <h5 class="card__title">Product</h5>
                     <div class="card__img-pic">
                         <img src="./img/product__item5.png" alt="Here is a photo of the product title above"
@@ -145,7 +157,7 @@
                     <h3 class="card__text">3 ways To automate your lead generation process with Yoora</h3>
                     <h4 class="card__footer">08 Jul 2022, <span class="card__footer--gray"> Leroy Figueroa</span> </h4>
                 </div>
-                <div class="card__img-body">
+                <div class="card__body">
                     <h5 class="card__title">Product</h5>
                     <div class="card__img-pic">
                         <img src="./img/product__item6.png" alt="Here is a photo of the product title above"
@@ -172,7 +184,7 @@
         <div class="container">
             <div class="marketing__content">
                 <div class="marketing-left card card__img">
-                    <div class="card__img-body">
+                    <div class="card__body">
                         <h5 class="card__title">Marketing</h5>
                         <div class="card__img-pic">
                             <img src="./img/marketing__img.png" alt="Here is a photo of the marketing title above"
@@ -248,7 +260,7 @@
     <section class="Blog_Article">
         <div class="container">
             <div class="article__content card card__img">
-                <div class="card__img-body">
+                <div class="card__body">
                     <h5 class="card__title">SERVICE</h5>
                     <div class="card__img-pic">
                         <img src="./img/article__img1.png" alt="Here is a photo of the article title above"
@@ -260,7 +272,7 @@
                         <span class="card__footer--gray">by joshua Nash</span>
                     </h4>
                 </div>
-                <div class="card__img-body">
+                <div class="card__body">
                     <h5 class="card__title">SALES</h5>
                     <div class="card__img-pic">
                         <img src="./img/article__img2.png" alt="Here is a photo of the article title above"
@@ -272,7 +284,7 @@
                         <span class="card__footer--gray"> by Amanda Brooks</span>
                     </h4>
                 </div>
-                <div class="card__img-body">
+                <div class="card__body">
                     <h5 class="card__title">SERVICE</h5>
                     <div class="card__img-pic">
                         <img src="./img/article__img3.png" alt="Here is a photo of the article title above"
@@ -353,7 +365,7 @@
             <div class="footer__content-right">
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="list__item"><a class="item" href="#">Company</a></li>
+                        <li class="list__item"><a id="list--mark" class="item " href="#">Company</a></li>
                         <li class="list__item"><a class="item" href="#">About</a></li>
                         <li class="list__item"><a class="item" href="#">Pricing</a></li>
                         <li class="list__item"><a class="item" href="#">Jobs</a></li>
@@ -363,7 +375,7 @@
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="list__item"><a class="item" href="#">Product</a></li>
+                        <li class="list__item"><a id="list--mark" class="item" href="#">Product</a></li>
                         <li class="list__item"><a class="item" href="#">Sales software</a></li>
                         <li class="list__item"><a class="item" href="#">Features</a></li>
                         <li class="list__item"><a class="item" href="#">Privacy and security</a></li>
@@ -374,7 +386,7 @@
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="list__item"><a class="item" href="#">Discover</a></li>
+                        <li class="list__item"><a id="list--mark" class="item" href="#">Discover</a></li>
                         <li class="list__item"><a class="item" href="#">Partner Program</a></li>
                         <li class="list__item"><a class="item" href="#">Get our newsletter</a></li>
                         <li class="list__item"><a class="item" href="#">Sales Pipeline Course</a></li>
@@ -385,7 +397,7 @@
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="list__item"><a class="item" href="#">Help Center</a></li>
+                        <li class="list__item"><a id="list--mark" class="item" href="#">Help Center</a></li>
                         <li class="list__item"><a class="item" href="#">Community</a></li>
                         <li class="list__item"><a class="item" href="#">Knowledge Base</a></li>
                         <li class="list__item"><a class="item" href="#">Academy</a></li>
@@ -408,14 +420,11 @@
                     <li><a class="item" href="#">Cookies</a></li>
                 </ul>
                 <div class="rule__locale">
-                    <button class="btn btn--flex">
                         <img src="./img/Shape.png" alt=" this is the icon for the change language button"
                             class="btn__icon">
-                        <p class="btn__text">English</p>
-                        <img src="./img/button__icon2.png"
-                            alt="this is the icon chevron-down for the change language button" class="btn__icon">
-                    </button>
-
+                        <select class="btn--flex" name="language" id="language">
+                            <option value="volvo">English</option>
+                            <option value="saab">Vietnamese</option>
                 </div>
             </div>
 
