--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -64,7 +64,6 @@
 
             </div>
 
-
     </header>
     <!-------------------
      Header end
@@ -202,7 +201,7 @@
                     <div class="card__body">
                         <div class="card--horizontal-block">
                             <h3 class="card__text">
-                                Marketplace Monthly Apps Spotlight: Aug 2022
+                                Access Yoora’s leads features on your mobile
                             </h3>
                             <h4 class="card__footer">
                                 11 Aug 2022,
