Fix/code styly, break line.

--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -360,7 +360,7 @@
                     </ul>
 
             </div>
-            <div class="footer__content-right text--black">
+            <div class="footer__content-right">
                 <div class="footer__menu">
                     <ul class="menu__list ">
                         <li class="list__item"><a id="list--mark" class="item " href="#">Company</a></li>
