--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -423,6 +423,7 @@
                         <select class="btn--flex" name="language" id="language">
                             <option value="volvo">English</option>
                             <option value="saab">Vietnamese</option>
+                        </select>
                 </div>
             </div>
 
