--- a/practice-01/index.html
+++ b/practice-01/index.html
@@ -56,14 +56,14 @@
             </div>
             <div class="header__tab nav__menu">
                 <ul class="tab__menu  menu__list ">
-                    <li><a class="list--mark" class="item font--medium" href="#">All Articles</a></li>
+                    <li><a class="list--mark item font--medium" href="#">All Articles</a></li>
                     <li><a class="item font--medium" href="#">Marketing</a></li>
                     <li><a class="item font--medium" href="#">Service</a></li>
                     <li><a class="item font--medium" href="#">Product</a></li>
                     <li><a class="item font--medium" href="#">News</a></li>
                 </ul>
             </div>
-
+        </div>
     </header>
     <!-------------------
      Header end
@@ -362,7 +362,7 @@
             <div class="footer__content-right">
                 <div class="footer__menu">
                     <ul class="menu__list ">
-                        <li class="list__item"><a class="list--mark" class="item " href="#">Company</a></li>
+                        <li class="list__item"><a class="list--mark item " href="#">Company</a></li>
                         <li class="list__item"><a class="item" href="#">About</a></li>
                         <li class="list__item"><a class="item" href="#">Pricing</a></li>
                         <li class="list__item"><a class="item" href="#">Jobs</a></li>
@@ -372,7 +372,7 @@
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="list__item"><a class="list--mark" class="item" href="#">Product</a></li>
+                        <li class="list__item"><a class="list--mark item" href="#">Product</a></li>
                         <li class="list__item"><a class="item" href="#">Sales software</a></li>
                         <li class="list__item"><a class="item" href="#">Features</a></li>
                         <li class="list__item"><a class="item" href="#">Privacy and security</a></li>
@@ -383,7 +383,7 @@
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="list__item"><a class="list--mark" class="item" href="#">Discover</a></li>
+                        <li class="list__item"><a class="list--mark item" href="#">Discover</a></li>
                         <li class="list__item"><a class="item" href="#">Partner Program</a></li>
                         <li class="list__item"><a class="item" href="#">Get our newsletter</a></li>
                         <li class="list__item"><a class="item" href="#">Sales Pipeline Course</a></li>
@@ -394,7 +394,7 @@
                 </div>
                 <div class="footer__menu">
                     <ul class="menu__list">
-                        <li class="list__item"><a class="list--mark" class="item" href="#">Help Center</a></li>
+                        <li class="list__item"><a class="list--mark item" href="#">Help Center</a></li>
                         <li class="list__item"><a class="item" href="#">Community</a></li>
                         <li class="list__item"><a class="item" href="#">Knowledge Base</a></li>
                         <li class="list__item"><a class="item" href="#">Academy</a></li>
