Fix : Fix button tag a link

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -43,9 +43,16 @@
                         </ul>
                     </div>
                     <div class="nav__button">
-                        <a href="__blank" class="btn btn--primary">Login</a>
-                        <button class="btn btn--secondary">Try for Free</button>
-
+                        <button class="btn btn--primary">
+                            <a href="#" target="_blank" class="text--black">
+                                Login
+                            </a>
+                        </button>
+                        <button class="btn btn--secondary">
+                            <a href="#" target="_blank" class="text--white">
+                                Try for Free
+                            </a>
+                        </button>
                     </div>
                 </nav>
             </div>
