Fix : Reponsive header__tab

--- a/practice-02/index.html
+++ b/practice-02/index.html
@@ -59,6 +59,7 @@
             <div class="header__tab nav__menu">
                 <ul class="tab__menu  menu__list ">
                     <li><a class="list--mark item font--medium" href="#">All Articles</a></li>
+                    <li><a class="item font--medium" href="#">Sales</a></li>
                     <li><a class="item font--medium" href="#">Marketing</a></li>
                     <li><a class="item font--medium" href="#">Service</a></li>
                     <li><a class="item font--medium" href="#">Product</a></li>
